Actions workflow added

--- a/static/form.html
+++ b/static/form.html
@@ -6,8 +6,8 @@
     <body>
         <div>
             <form method="POST" action="/form">
-            <label>Name</label><input name="name" type="text" value=""/>   
-            <label>Address</label><input name="address" type="text" value=""/>
+            <label>Name</label><input name="name" type="text" value="Srikanth Reddy"/>   
+            <label>Address</label><input name="address" type="text" value="Chandavaram"/>
             
             <input type="submit" value="submit"/>
             
